--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -10,6 +10,9 @@
   background-size: cover;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
+.p {
+  color: gray;
+}
 .headerContainer {
   width: auto;
   margin-left: 50px;
